
<resources>
    <string name="app_name">Bhubaneswar Tour Guide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="temple">Temple</string>
    <string name="special_attraction">Special Attraction</string>
    <string name="restaurant">Restaurant</string>
    <string name="shopping">Shopping</string>
    <string name="museum">Museum</string>
    <string name="historical_place">Historical Place</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dhauli_giri_hill">Dhauli Giri Hill</string>
    <string name="godavari_pond">Godavri Pond</string>
    <string name="khandagiri_caves">Khandagiri Caves</string>
    <string name="panchu_pandava_caves">Panchu Pandava Caves</string>
    <string name="sisupalgarh">Sisupalgarh</string>
    <string name="udayagiri_caves">Udayagiri Caves</string>
    <string name="dhauli_gir_address">Dhauli Shanti Stupa, C - 40, Market Building, Sahid Nagar, Bhubaneswar, Odisha 751007</string>
    <string name="godavari_pond_address">Godabari Pond, Old Town, Bhubaneswar, Odisha 751002</string>
    <string name="khandagiri_cave_address">Khandagiri Caves, Khandagiri, Bhubaneswar, Odisha 751030</string>
    <string name="panchu_pandava_caves_address">Panchu Pandav Caves, Badagada Brit Colony, Pandav Nagar, Bhubaneswar, Odisha 751018</string>
    <string name="sisupalgarh_address">Sisupalgarh, Bhubaneswar, Odisha 751002</string>
    <string name="udayagiri_address">Khandagiri Caves, Khandagiri, Bhubaneswar, Odisha 751030</string>
    <string name="regional_museum">Regional Museum of Natural History</string>
    <string name="tribal_museum">Museum of Tribal Arts and Artifacts</string>
    <string name="odisha_state_museum">Odisha State Museum</string>
    <string name="odisha_craft_museum">State craft Museum</string>
    <string name="orient_craft_museum">Orient Crafts Museum</string>
    <string name="kala_bhoomi_museum">KALA BHOOMI ODISHA CRAFTS MUSEUM</string>
    <string name="regional_museum_address">Acharya Vihar, RRL PO, Near Planetorium, Bhubaneswar, 751013</string>
    <string name="tribal_museum_address">Unit - VIII. CRPF Square. Nayapalli CRPF Colony, Nayapalli, Bhubaneswar, Odisha 751003</string>
    <string name="odisha_state_museum_address">BJB Nagar, Lewis Road, Near Kalpana Square, Bhubaneswar, Odisha 751014</string>
    <string name="odisha_craft_museum_address">shilpivihar, 1571, Bhaktamadhu Nagar Rd, Bhaktamadhu Nagar, Pokhariput, Bhubaneswar, Odisha 751020</string>
    <string name="orient_craft_museum_address">Plot No-2069, Haragouri Niwas, Mahatab Road,Old Town,Bhubaneswar, Near SBI, Bhubaneswar, Odisha 751002</string>
    <string name="kala_bhoomi_museum_address">Gandamunda, Pokhariput, Bhubaneswar, Odisha 751030</string>
    <string name="silver_streax">Silver Streak</string>
    <string name="taste_of_china">Taste of China</string>
    <string name="mainland_china">Mainland China</string>
    <string name="yummies">YUMMYIES</string>
    <string name="the_chef">The Chef</string>
    <string name="lemon_grass">Lemon Grass</string>
    <string name="silver_streax_address">Plot No. A/103, NH-5, 1st Floor, Mik Nik Mall, Near NB Tower, Nayapalli, Bhubaneswar, Odisha 751012</string>
    <string name="taste_of_china_address">142, Water Tank Ln, Bapuji Nagar, Bhubaneswar, Odisha 751009</string>
    <string name="mainland_china_address">A1/A, Ground Floor, The Crown, Service Rd, IRC Village, Nayapalli, Bhubaneswar, Odisha 751015</string>
    <string name="yummies_address">31, 32, Subham Market Complex, Near Forum Mart, Kharabela Nagar, Bhubaneswar, Odisha 751001</string>
    <string name="the_chef_address">NB Towers, Plot No-426/2260, Ground Floor, Nilakantha Nagar, Nayapalli, Bhubaneswar, Odisha 751012</string>
    <string name="lemon_grass_address">Shop No 6 Lagoon, MayFair Road, Bhubaneswar, Odisha 751013</string>
    <string name="bhubaneswar_central">Bhubaneswar Central</string>
    <string name="forum_mart">Forum Mart</string>
    <string name="pantaloons">Pantaloons</string>
    <string name="the_world">The World</string>
    <string name="pal_heights">Pal Heights Mall</string>
    <string name="bmc_mall">BMC Bhawani Mall</string>
    <string name="forum_esplanade">FORUM ESPLANADE</string>
    <string name="bhubaneswar_central_address">Plot No.795, Next To Pantaloon, Janpath Rd, Saheed Nagar, Bhubaneswar, Odisha 751007</string>
    <string name="forum_mart_address">Satya Nagar Flyover Rd, Railway Yard and Washing Line, Kharabela Nagar, Bhubaneswar, Odisha 751007</string>
    <string name="pantaloons_address">Plot No. A/B, Suruchi Commercial Complex, Janpath Road, Saheed Nagar, Bhubhaneshwar, Odisha 751009</string>
    <string name="the_world_address">The World, Nayapalli, Bhubaneswar, Odisha 751012</string>
    <string name="pal_heights_address">Nandan Kanan Rd, Jayadev Vihar, Bhubaneswar, Odisha 751013</string>
    <string name="bmc_mall_address">Maharishi College Road, Near Maharshi College, Sahid Nagar, Bhubaneswar, Odisha 751007</string>
    <string name="forum_esplanade_address">End of Bomikhal Overbridge, Rasulgarh, Bhubaneswar, Odisha</string>
    <string name="ingaral_temple">Lingaraja Temple</string>
    <string name="bramhaswar_temple_address">Brahmeswara Temple</string>
    <string name="rajarani_temple">Rajarani Temple</string>
    <string name="chausathi_jagini_temple">Chausathi Jogini Temple</string>
    <string name="parsurameswar_temple">Parashurameshvara Temple</string>
    <string name="rameswar_temple">Rameshwar Temple</string>
    <string name="lingaraj_temple_address">Rath Road, Bhubaneswar, Odisha 751002</string>
    <string name="bramheswar_temple">Near, Tankapani Road, Siba Nagar, Brahmeswarpatna, Bhubaneswar, Odisha 751002</string>
    <string name="rajarani_temple_address">Tankapani Rd, Near BOI ATM, Bhubaneswar, Odisha 751002</string>
    <string name="chausathi_jogini_temple_address">balianta, Hirapur, Odisha 752100</string>
    <string name="parsurameswar_temple_address">Near Bindu Sagar Pond, 7th Century A.D., Old Town, Bhubaneswar, Odisha 751002</string>
    <string name="rameswar_temple_address">Old Town, Bhubaneswar, Odisha 751002</string>
    <string name="google_url">http://maps.google.co.in/maps?q=</string>
</resources>
