<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/historical_place" />
        <item
            android:id="@+id/nav_museum"
            android:icon="@drawable/ic_museum"
            android:title="@string/museum" />
        <item
            android:id="@+id/nav_shopping"
            android:icon="@drawable/ic_shopping"
            android:title="@string/shopping" />
        <item
            android:id="@+id/nav_restaurant"
            android:icon="@drawable/ic_restaurant"
            android:title="@string/restaurant" />
        <item
            android:id="@+id/nav_temple"
            android:icon="@drawable/ic_temple"
            android:title="@string/temple"/>

    </group>



</menu>
